--- a/Crawler/Packages/manifest.json
+++ b/Crawler/Packages/manifest.json
@@ -2,8 +2,8 @@
   "dependencies": {
     "com.unity.collab-proxy": "2.0.5",
     "com.unity.feature.development": "1.0.1",
-    "com.unity.ml-agents": "file:C:/Users/Saku/Documents/Dippa/Crawler/com.unity.ml-agents",
-    "com.unity.ml-agents.extensions": "file:C:/Users/Saku/Documents/Dippa/Crawler/com.unity.ml-agents.extensions",
+    "com.unity.ml-agents": "file:../../com.unity.ml-agents",
+    "com.unity.ml-agents.extensions": "file:../../com.unity.ml-agents.extensions",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.5",
     "com.unity.ugui": "1.0.0",
