--- a/Python/requirements.txt
+++ b/Python/requirements.txt
@@ -1,9 +1,8 @@
 mlagents-envs==0.30.0
-gym==0.23.1
-numpy==1.21.2
-stable-baselines3==1.2.0
-protobuf==3.20.0
+stable-baselines3==2.0.0
 tensorboard==2.14.0
+protobuf=3.20.3
+--find-links https://download.pytorch.org/whl/torch_stable.html
 torch==2.0.1+cu118
 torchaudio==2.0.2+cu118
 torchvision==0.15.2+cu118
