--- a/Crawler/Packages/manifest.json
+++ b/Crawler/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.unity.collab-proxy": "2.0.5",
     "com.unity.feature.development": "1.0.1",
+    "com.unity.ide.visualstudio": "2.0.21",
     "com.unity.ml-agents": "file:../../com.unity.ml-agents",
     "com.unity.ml-agents.extensions": "file:../../com.unity.ml-agents.extensions",
     "com.unity.textmeshpro": "3.0.6",
