--- a/Python/requirements.txt
+++ b/Python/requirements.txt
@@ -1,8 +1,10 @@
 mlagents-envs==0.30.0
 stable-baselines3==2.0.0
 tensorboard==2.14.0
-protobuf=3.20.3
+protobuf==3.20.3
 --find-links https://download.pytorch.org/whl/torch_stable.html
 torch==2.0.1+cu118
 torchaudio==2.0.2+cu118
 torchvision==0.15.2+cu118
+ray[rllib]==2.7.1
+onnx=1.14.1
