--- a/Crawler/Packages/manifest.json
+++ b/Crawler/Packages/manifest.json
@@ -2,11 +2,12 @@
   "dependencies": {
     "com.unity.collab-proxy": "2.0.5",
     "com.unity.feature.development": "1.0.1",
-    "com.unity.ide.visualstudio": "2.0.21",
+    "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.ml-agents": "file:../../com.unity.ml-agents",
     "com.unity.ml-agents.extensions": "file:../../com.unity.ml-agents.extensions",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.5",
+    "com.unity.toolchain.linux-x86_64": "2.0.6",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.8.0",
     "com.unity.modules.ai": "1.0.0",
